--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@
 
 # Site settings
 title: DevChai
-email: hemangsk@gmail.com
-description: The Liberal Jekyll Theme
+email: ohinchang@mail.com
+description: Developer C
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://devchai.github.io" # the base hostname & protocol for your site
 github_username:  devchai
