Mod _config.yml - url

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: DevChai
 email: ohinchang@mail.com
 description: Developer C
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://devchai.github.io" # the base hostname & protocol for your site
+url: "https://devchai.github.io" # the base hostname & protocol for your site
 github_username:  devchai
 
 # Build settings
