--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,12 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Gravity
-email: hemangsk@gmail.com
+title: Dev Chai
+email: multijog2@naver.com
 description: The Liberal Jekyll Theme
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: hemang_kumar
-github_username:  hemangsk
+url: "http://devchai.github.io" # the base hostname & protocol for your site
+github_username:  devchai
 paginate: 5
 
 gems: [jekyll-paginate, kramdown]
