--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: Dev Chai
 email: multijog2@naver.com
-description: The Liberal Jekyll Theme
+description: If you can concentrate always on the present you'll be a happy man
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://devchai.github.io" # the base hostname & protocol for your site
 github_username:  devchai
