--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Dev Chai
 email: multijog2@naver.com
 description: If you can concentrate always on the present you'll be a happy man
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://devchai.github.io" # the base hostname & protocol for your site
+url: "https://devchai.github.io" # the base hostname & protocol for your site
 github_username:  devchai
 paginate: 5
 gems: [jekyll-paginate, kramdown]
