--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Dev Chai
+title: Dev C
 email: multijog2@naver.com
 description: If you can concentrate always on the present you'll be a happy man
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -16,4 +16,8 @@ paginate: 5
 gems: [jekyll-paginate, kramdown]
 # Build settings
 markdown: kramdown
+# Handling Reading
 exclude : ["tmp"]
+encoding:     "utf-8"
+keep_files:   [".git", ".svn"]
+
