blog description 변경 -> I Dreamed a Dream

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: Dev C
 email: multijog2@naver.com
-description: If you can concentrate always on the present you'll be a happy man
+description: I Dreamed a Dream
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://devchai.github.io" # the base hostname & protocol for your site
 github_username:  devchai
