--- a/json/mytube/app_list.json
+++ b/json/mytube/app_list.json
@@ -1,7 +1,7 @@
 {
   "items": [
     {
-      "keywords": "마이튜브-유튜브다운(원스토어)",
+      "keywords": "마이튜브-유튜브다운로드(원스토어)",
       "type": "android",
       "flag": "best", 
       "thumbs": "http://i.imgur.com/VrleENL.png",
