--- a/json/mytube/app_list.json
+++ b/json/mytube/app_list.json
@@ -1,5 +1,13 @@
 {
   "items": [
+  	{
+      "keywords": "리얼피드-커뮤니티 인기글",
+      "type": "android",
+      "flag": "best", 
+      "thumbs": "http://i.imgur.com/plBdgm3.png",
+      "url": "https://goo.gl/tCoHRw",
+      "desc": "실시간으로 커뮤니티 인기글을 한 곳에서 즐기자!~!" 
+    },
     {
       "keywords": "마이튜브-유튜브다운로드(원스토어)",
       "type": "android",
