--- a/json/mytube/app_list.json
+++ b/json/mytube/app_list.json
@@ -13,7 +13,7 @@
       "type": "android",
       "flag": "best", 
       "thumbs": "http://i.imgur.com/VrleENL.png",
-      "url": "https://goo.gl/tlC8MM",
+      "url": "http://onesto.re/0000697079",
       "desc": "원스토어 마켓에서 유튜브를 다운로드할 수 있는 마이튜브를 검색해주세요." 
     },
     {
