--- a/json/mytube/app_list.json
+++ b/json/mytube/app_list.json
@@ -1,7 +1,7 @@
 {
   "items": [
   	{
-      "keywords": "리얼피드-커뮤니티 인기글",
+      "keywords": "리얼피드 - 인기 컨텐츠 모음 앱",
       "type": "android",
       "flag": "best", 
       "thumbs": "http://i.imgur.com/plBdgm3.png",
