--- a/json/mytube/app_list.json
+++ b/json/mytube/app_list.json
@@ -1,5 +1,13 @@
 {
   "items": [
+    {
+      "keywords": "로드샵-화장품 세일 정보 앱",
+      "type": "android",
+      "flag": "best", 
+      "thumbs": "http://i.imgur.com/9fnrITZ.png",
+      "url": "http://onesto.re/0000721162",
+      "desc": "로드샵 화장품 브랜드들의 온/오프라인 할인정보를 하나의 앱 에서 모두 확인해볼수 있습니다. "
+    },
   	{
       "keywords": "리얼피드 - 인기 컨텐츠 모음 앱",
       "type": "android",
