--- a/json/mytube/app_list.json
+++ b/json/mytube/app_list.json
@@ -17,7 +17,7 @@
       "desc": "원스토어 마켓에서 유튜브를 다운로드할 수 있는 마이튜브를 검색해주세요." 
     },
     {
-      "keywords": "데스티니6",
+      "keywords": "데스티니",
       "type": "android",
       "flag": "best",
       "thumbs": "https://lh3.googleusercontent.com/dZUNbYxcdYTkHqBNzuF33fPToJJI5IJcE-EmNn-V3j78uf7h9jwe3ibfO-jYzEKhgQo=w124",
