--- a/json/mytube/app_list.json
+++ b/json/mytube/app_list.json
@@ -5,7 +5,7 @@
       "type": "android",
       "flag": "best", 
       "thumbs": "http://i.imgur.com/plBdgm3.png",
-      "url": "http://onesto.re/0000714892",
+      "url": "com.best.realfeed",
       "desc": "실시간으로 커뮤니티 인기글을 한 곳에서 즐기자!~! 설치가 안될경우 원스토어에서 리얼피드 검색후 설치해주세요."
     },
     {
