--- a/json/mytube/app_list.json
+++ b/json/mytube/app_list.json
@@ -9,12 +9,12 @@
       "desc": "실시간으로 커뮤니티 인기글을 한 곳에서 즐기자!~! 설치가 안될경우 원스토어에서 리얼피드 검색후 설치해주세요."
     },
     {
-      "keywords": "마이튜브-유튜브다운로드(원스토어)",
+      "keywords": "마이튜브-유튜브다운로더(원스토어)",
       "type": "android",
       "flag": "best", 
       "thumbs": "http://i.imgur.com/VrleENL.png",
       "url": "http://onesto.re/0000697079",
-      "desc": "원스토어 마켓에서 유튜브를 다운로드할 수 있는 마이튜브를 검색해주세요." 
+      "desc": "원스토어에서 무료 음악 재생도 가능한 최신 버전의 마이튜브를 설치해주세요." 
     },
     {
       "keywords": "데스티니",
