--- a/json/mytube/app_list.json
+++ b/json/mytube/app_list.json
@@ -5,7 +5,7 @@
       "type": "android",
       "flag": "best", 
       "thumbs": "http://i.imgur.com/plBdgm3.png",
-      "url": "com.best.realfeed",
+      "url": "com.best.realfeed.new",
       "desc": "실시간으로 커뮤니티 인기글을 한 곳에서 즐기자!~!"
     },
     {
