--- a/json/mytube/app_list.json
+++ b/json/mytube/app_list.json
@@ -1,28 +1,12 @@
 {
   "items": [
     {
-      "keywords": "마이튜브S-올인원버전(원스토어)",
+      "keywords": "마이튜브-올인원버전",
       "type": "android",
       "flag": "best", 
       "thumbs": "http://i.imgur.com/9Osukor.png",
-      "url": "http://onesto.re/0000737100",
+      "url": "https://m.onestore.co.kr/mobilepoc/apps/appsDetail.omp?prodId=0000743000",
       "desc": "이제 인스타그램, 데일리모션, 카카오, 네이버, 구글에서 이용 하실수 있습니다." 
-    },
-  	{
-      "keywords": "리얼피드 - 인기 컨텐츠 모음 앱",
-      "type": "android",
-      "flag": "best", 
-      "thumbs": "http://i.imgur.com/plBdgm3.png",
-      "url": "com.best.realfeed.new",
-      "desc": "실시간으로 커뮤니티 인기글을 한 곳에서 즐기자!~!"
-    },
-    {
-      "keywords": "마이튜브-유튜브다운로더(원스토어)",
-      "type": "android",
-      "flag": "best", 
-      "thumbs": "http://i.imgur.com/VrleENL.png",
-      "url": "http://onesto.re/0000697079",
-      "desc": "원스토어에서 무료 음악 재생도 가능한 최신 버전의 마이튜브를 설치해주세요." 
     },
     {
       "keywords": "데스티니",
