--- a/mytube_config.json
+++ b/mytube_config.json
@@ -1,5 +1,5 @@
 {
   "abuse_web_url" : "https://www.coupang.com/vp/products/6475695647?itemId=14152560379&vendorItemId=81399059194&q=%EB%B2%84%ED%82%B7%ED%96%87&itemsCount=36&searchId=9d7c59ccdd1743e6af20b4b5beb936c4&rank=3&isAddedCart=",
-  "search_type":"native",
+  "search_type":"web",
   "etc":""
 }
