--- a/mytube_config.json
+++ b/mytube_config.json
@@ -1,5 +1,5 @@
 {
-  "abuse_web_url" : "https://dev-c.tistory.com/entry/%EC%96%B4%EC%8C%94%EC%8B%A0-%ED%81%AC%EB%A6%AC%EB%93%9C-%EC%84%80%EB%8F%84%EC%9A%B0-%EC%9D%BC%EB%B3%B8%EC%9D%84-%EB%B0%B0%EA%B2%BD%EC%9C%BC%EB%A1%9C-%ED%95%9C-%EC%8B%9C%EB%A6%AC%EC%A6%88%EC%9D%98-%EB%B6%80%ED%99%9C",
+  "abuse_web_url" : "https://blog.naver.com/dev__c/223845736495",
   "search_type":"web",
   "etc":""
 }
