--- a/mytube_config.json
+++ b/mytube_config.json
@@ -1,5 +1,5 @@
 {
-  "abuse_web_url" : "https://blog.naver.com/dev__c/223845736495",
+  "abuse_web_url" : "https://www.coupang.com/vp/products/8270000364?itemId=23832856585&vendorItemId=90856435417&q=%EC%9E%A0%EC%98%B7&searchId=c8e8555b935822&sourceType=search&itemsCount=36&searchRank=147&rank=147",
   "search_type":"web",
   "etc":""
 }
