--- a/mytube_config.json
+++ b/mytube_config.json
@@ -1,5 +1,5 @@
 {
-  "abuse_web_url" : "https://www.coupang.com/vp/products/8270000364?itemId=23832856585&vendorItemId=90856435417&q=%EC%9E%A0%EC%98%B7&searchId=c8e8555b935822&sourceType=search",
+  "abuse_web_url" : "https://www.coupang.com/vp/products/6530141362?itemId=14500447711&vendorItemId=81743486222&q=%EC%9E%A0%EC%98%B7",
   "search_type":"web",
   "etc":""
 }
