--- a/mytube_config.json
+++ b/mytube_config.json
@@ -1,5 +1,5 @@
 {
-  "abuse_web_url" : "https://www.coupang.com/vp/products/7434233204?itemId=19316171388&vendorItemId=86430375934&q=%EC%9E%A0%EC%98%B7",
+  "abuse_web_url" : "https://www.coupang.com/np/search?component=&q=%EC%9E%A0%EC%98%B7&channel=user",
   "search_type":"web",
-  "etc":""
+  "etc":"/vp/products/8505703599"
 }
