--- a/mytube_config.json
+++ b/mytube_config.json
@@ -1,5 +1,5 @@
 {
-  "abuse_web_url" : "https://www.coupang.com/np/search?component=&q=%EC%9E%A0%EC%98%B7&channel=user",
+  "abuse_web_url" : "",
   "search_type":"web",
   "etc":"https://www.coupang.com/vp/products/6530141362?itemId=14500447711&vendorItemId=81743486222"
 }
