--- a/json/pictrip/config.json
+++ b/json/pictrip/config.json
@@ -5,5 +5,6 @@
 	],
 	"clothes":[
 		"캐쥬얼", "정장", "원피스"
-	]
+	],
+	"prompt":"masterpiece, best quality, highly detailed, professional photography, Everyone in image 1, center composition, {location} photography, {clothe}, iconic landmark background, maintain facial identity, travel photography, candid pose, natural aesthetic, authentic moment, photorealistic, 8K resolution, cinematic composition"
 }
