--- a/json/pictrip/config.json
+++ b/json/pictrip/config.json
@@ -22,5 +22,5 @@
 		"스포츠웨어", "등산복", "아웃도어 룩", "레깅스",
 		"롱코트", "패딩", "퍼 재킷", "트위드 재킷"
 	],
-	"prompt":"masterpiece, best quality, highly detailed, professional photography, Everyone in image 1, center composition, {location} photography, {clothe}, iconic landmark background, maintain facial identity, travel photography, candid pose, natural aesthetic, authentic moment, photorealistic, 8K resolution, cinematic composition"
+	"prompt":"masterpiece, best quality, highly detailed, professional photography, Everyone in image 1, center composition, {location} photography, {clothe}, iconic landmark background, maintain facial identity, instagram selfie, travel photography, candid pose, natural aesthetic, authentic moment, photorealistic, 8K resolution, cinematic composition"
 }
