--- a/mytube_config.json
+++ b/mytube_config.json
@@ -1,5 +1,5 @@
 {
-  "abuse_web_url" : "https://www.coupang.com/vp/products/7709228548?itemId=20626079710&vendorItemId=93710745345&q=%EB%B0%94%EB%9D%BC%ED%81%B4%EB%9D%BC%EB%B0%94",
+  "abuse_web_url" : "https://www.coupang.com/vp/products/8397613925?itemId=24273148770&vendorItemId=91289633529&q=%EB%B0%94%EB%9D%BC%ED%81%B4%EB%9D%BC%EB%B0%94&searchId=d3e11aa75104548",
   "search_type":"web",
   "etc":"https://www.coupang.com/vp/products/6530141362?itemId=14500447711&vendorItemId=81743486222"
 }
