--- a/mytube_config.json
+++ b/mytube_config.json
@@ -1,5 +1,5 @@
 {
-  "abuse_web_url" : "https://www.coupang.com/vp/products/6953997081?itemId=24568842633&vendorItemId=83744297138&q=%EB%B0%94%EB%9D%BC%ED%81%B4%EB%9D%BC%EB%B0%94&searchId=3f24aad92628834&sourceType=search&itemsCount=36",
+  "abuse_web_url" : "https://blog.naver.com/dev__c/224074807612",
   "search_type":"web",
   "etc":"https://www.coupang.com/vp/products/6530141362?itemId=14500447711&vendorItemId=81743486222"
 }
