--- a/mytube_config.json
+++ b/mytube_config.json
@@ -1,5 +1,5 @@
 {
-  "abuse_web_url" : "https://www.coupang.com/vp/products/9161090472?itemId=26984409389&vendorItemId=93953625123&q=%EB%B0%94%EB%9D%BC%ED%81%B4%EB%9D%BC%EB%B0%94&searchId=00a875384910927&sourceType=search",
+  "abuse_web_url" : "https://www.ppomppu.co.kr/zboard/view.php?id=ppomapp&page=1&divpage=2&no=10085",
   "search_type":"web",
   "etc":"https://www.coupang.com/vp/products/6530141362?itemId=14500447711&vendorItemId=81743486222"
 }
