--- a/mytube_config.json
+++ b/mytube_config.json
@@ -1,5 +1,5 @@
 {
-  "abuse_web_url" : "https://www.ppomppu.co.kr/zboard/view.php?id=ppomapp&page=1&divpage=2&no=10085",
+  "abuse_web_url" : "https://www.coupang.com/vp/products/8384438668?itemId=24231896813&vendorItemId=91249474951&q=%EB%B0%94%EB%9D%BC%ED%81%B4%EB%9D%BC%EB%B0%94",
   "search_type":"web",
   "etc":"https://www.coupang.com/vp/products/6530141362?itemId=14500447711&vendorItemId=81743486222"
 }
